[package]
name = "lepcc"
version = "0.1.0"
edition = "2021"
authors = ["mocongxin"]
description = "High-performance point cloud compression for I3S format - LEPCC implementation in Rust"
license = "MIT"
repository = "https://github.com/MoCongxin/lepcc-rust"
readme = "README.md"
keywords = ["compression", "point-cloud", "lidar", "3d", "i3s", "laser", "geospatial"]
categories = ["compression", "science", "data-structures", "algorithms"]
include = [
    "/src/**/*.rs",
    "/README.md",
    "/LICENSE",
    "/examples"
]

[lib]
name = "lepcc"
path = "src/lib.rs"

[[example]]
name = "duipai"
path = "examples/duipai.rs"

[[example]]
name = "encode_only"
path = "examples/encode_only.rs"

